[package]
categories = []
description = "Verify Discord interactions on Cloudflare Workers with Twilight."
homepage = "https://github.com/zeylahellyer/twilight-cloudflare-workers"
edition = "2021"
name = "twilight-cloudflare-workers"
publish = false
repository = "https://github.com/zeylahellyer/twilight-cloudflare-workers.git"
version = "0.1.0"

[dependencies]
hex = "0.4.0"
ed25519-dalek = "1.0.0"
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }
twilight-model = { default-features = false, version = "0.15" }
worker = { default-features = false, version = "0.0.9" }
