[package]
categories = []
description = "Verify Discord interactions on Cloudflare Workers with Twilight."
homepage = "https://github.com/zeylahellyer/twilight-cloudflare-workers"
edition = "2021"
name = "twilight-cloudflare-workers"
publish = false
repository = "https://github.com/zeylahellyer/twilight-cloudflare-workers.git"
version = "0.1.0"

[dependencies]
hex = "0.4.0"
ed25519-dalek = "1.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
worker = { version = "0.0.17", default-features = false }
